--- a/kids/package.json
+++ b/kids/package.json
@@ -21,7 +21,9 @@
     "express-validator": "^4.3.0",
     "joi": "^13.0.2",
     "method-override": "^2.3.10",
+    "morgan": "^1.9.0",
     "mysql": "^2.15.0",
+    "mysql2": "^1.5.1",
     "sequelize": "^4.28.1"
   },
   "engines": {
