--- a/kids/package.json
+++ b/kids/package.json
@@ -10,6 +10,7 @@
   "author": "Rocha",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
@@ -24,6 +25,9 @@
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.1",
+    "passport": "^0.4.0",
+    "passport-google": "^0.3.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^4.28.1"
   },
   "engines": {
