--- a/kids/package.json
+++ b/kids/package.json
@@ -16,6 +16,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-flash": "0.0.2",
+    "express-handlebars": "^3.0.0",
     "express-load": "^1.1.16",
     "express-session": "^1.15.6",
     "express-validation": "^1.0.2",
